2002-01-08  Mark McLoughlin  <mark@skynet.ie>

	* APPLET_WRITING, applet-object.c, applet-object.h,
	  applet-private.h, applet-widget.c, applet-widget.h,
	  appletsConf.sh.in, bad-applet.c, dockletsConf.sh.in,
	  extern.c, extern.h: kill cruft.

2002-01-07  Glynn Foster  <glynn.foster@sun.com>
	
	* basep-widget.c, basep-widget.h, main.c panel-config-global.h, 
	  panel-global-config.schemas, panel-per-panel-config.schemas,
	  panel-types.h, session.c: 

	Remove mostly all traces of non-usable gconf schema keys in preference
	to using gconf_string_to_enum and vice versa. This will hang your panel
	unless you remove ~/.gconf/apps/panel and 'make install'.

2002-01-07  Mark McLoughlin  <mark@skynet.ie>

	* applet.c:
	(applet_callback_callback): kill APPLET_RUN stuff.
	(panel_applet_load_from_unique_id),
	(panel_applet_save_to_gconf): load/save drawers, swallowed
	apps, status docks, logout and lock buttons.

	* drawer.[ch]:
	(load_drawer_applet): add gconf_key arg.
	(drawer_save_to_gconf), (drawer_load_from_gconf): impl.

	* swallow.[ch]: (really_add_swallow): upd.
	(load_swallow_applet): add gconf_key param.
	(swallow_save_to_gconf), (swallow_load_from_gconf): impl.

	* menu.[ch]: (add_drawers_from_dir), (add_drawer_to_panel):
	upd for drawers changes.

	* panel.c: (drop_internal_applet): ditto.

	* panel-main.h: kill panel_main_get_current_profile.

	* session.c: (panel_session_save_applets), (panel_quit):
	kill old applets loading/saving stuff.

2002-01-07  Mark McLoughlin  <mark@skynet.ie>

	* applet.c: (panel_applet_load_from_unique_id),
	(panel_applet_save_to_gconf): load menus.

	* menu.[ch]: (add_menu_to_panel): upd.
	(load_menu_applet): add gconf_key arg.
	(menu_save_to_gconf), (menu_load_from_gconf): impl.

	* panel.c: (drop_menu): update for load_menu_applet change.

	* launcher.c: (launcher_save_to_gconf), (launcher_load_from_gconf):
	use object's keys, not applet's keys. doh.

2002-01-07  Mark McLoughlin  <mark@skynet.ie>
