@@ -1,3 +1,9 @@
+2002-01-08  Glynn Foster  <glynn.foster@sun.com>
+
+	* panel-gconf.c: Add some more error checking to the loading of 
+	gconf. Still far from adequate, but it might just stop panel from 
+	crapping out. Thanks to Mark for bugging me about this ;)
+
 2002-01-08  Mark McLoughlin  <mark@skynet.ie>
 
 	* APPLET_WRITING, applet-object.c, applet-object.h,
